--- a/package.json
+++ b/package.json
@@ -10,21 +10,29 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.11.3",
+    "@sanity/vision": "^3.12.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.23.0",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
-    "sanity": "^3.11.3",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-portable-text": "^0.6.0",
+    "react-slick": "^0.29.0",
+    "sanity": "^3.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
