--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.0",
     "@types/node": "20.2.5",
+    "@types/pg": "^8.10.2",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.23.0",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
+    "pg": "^8.11.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +37,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.19.2",
     "encoding": "^0.1.13"
   }
 }
