--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.0",
+    "@stripe/stripe-js": "^1.54.1",
     "@types/node": "20.2.5",
     "@types/pg": "^8.10.2",
     "@types/react": "18.2.7",
@@ -21,7 +22,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.23.0",
-    "next": "13.4.4",
+    "next": "^13.4.4",
     "next-sanity": "^4.3.3",
     "pg": "^8.11.1",
     "postcss": "8.4.24",
@@ -33,6 +34,7 @@
     "react-portable-text": "^0.6.0",
     "react-slick": "^0.29.0",
     "sanity": "^3.12.0",
+    "stripe": "^12.11.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
